--- a/demoT3.html
+++ b/demoT3.html
@@ -68,7 +68,8 @@ img {
                 // Crea un elemento iframe para embeber el video de YouTube
                 var imagen = document.createElement('img');
                 imagen.className = 'overflow';
-                imagen.src = 'https://eliasagustin.github.io/EGraficos/placa_tv_1920x1080_CN.jpg';
+                // imagen.src = 'https://eliasagustin.github.io/EGraficos/placa_tv_1920x1080_CN.jpg';
+                imagen.src = 'https://raw.githubusercontent.com/eliasagustin/EGraficos/main/TR-4k.jpg';
                 imagen.style.position = 'absolute';
                 imagen.style.top = '0';
                 imagen.style.left = '0';
