--- a/demoT3.html
+++ b/demoT3.html
@@ -24,7 +24,8 @@ img {
 <body>
     <div class="contenedor">
 
-    <iframe id="myIfr" src="https://informacion-tabla-terminal-rosario.onrender.com" frameborder="0"></iframe>
+<!--     <iframe id="myIfr" src="https://informacion-tabla-terminal-rosario.onrender.com" frameborder="0"></iframe> -->
+    <iframe id="myIfr" src="https://grupotr.com.ar" frameborder="0"></iframe>
 
     <img id="imagenLateral" alt="Imagen lateral">
 </div>
@@ -34,7 +35,7 @@ img {
     var imagenLateral = document.getElementById("imagenLateral");
 
     function reload() {
-        document.getElementById('myIfr').src = 'https://informacion-tabla-terminal-rosario.onrender.com';
+        document.getElementById('myIfr').src = 'https://grupotr.com.ar';
         imagenLateral.src = "https://raw.githubusercontent.com/eliasagustin/InforTerminal/master/imgLateral/img_01.jpg";
     }
     reload();
