--- a/tr.html
+++ b/tr.html
@@ -51,7 +51,7 @@ img {
     
     var video1 = document.getElementById("video1");
         video1.className = 'overflow';
-        video1.src = "video/dengue.mp4";
+        video1.src = "https://guzmannicolas.com.ar/tr/video/dengue.mp4";
         video1.style.position = 'absolute';
         video1.style.top = '0';
         video1.style.left = '0';
