--- a/tr.html
+++ b/tr.html
@@ -28,7 +28,7 @@ img {
 </head>
 <body>
     <div class="contenedor">
-        <iframe id="myIfr" src="http://grupotr.com.ar/" frameborder="0"></iframe>
+        <iframe id="myIfr" src="https://grupotr.com.ar/" frameborder="0"></iframe>
         <img id="imagenLateral" alt="Imagen lateral">
         <video id="video1" alt="carga de video1"></video>
     </div>
@@ -68,7 +68,7 @@ img {
     // Append the video element to the document or a specific element
     document.body.appendChild(video1);
     function reload() {
-        document.getElementById('myIfr').src = 'http://grupotr.com.ar/';
+        document.getElementById('myIfr').src = 'https://grupotr.com.ar/';
         imagenLateral.src = "https://raw.githubusercontent.com/eliasagustin/InforTerminal/master/imgLateral/img_01.jpg";
     }
     reload();
